# cgal_mesh_boolean_subtract_gdextension

./: CMakeLists.txt
conversion/: mesh_conversion.cpp  mesh_conversion.hpp
include/: cgal_types.hpp
modules/: boolean.cpp
src/: cgal_wrapper.cpp  cgal_wrapper.h  register_types.cpp
wrappers/: boolean_ops.cpp  convex_hull.cpp  remeshing.cpp
